--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="header__lang-link header__lang-link_decoration_underlined" href="#">Ru</a>
       </li>
       <li>
-        <a class="header__lang-link header__lang-link_decoration_underlined" href="#">En</a>
+        <a class="header__lang-link" href="#">En</a>
       </li>
     </ul>
   </header>
@@ -26,8 +26,28 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="" alt="" class="lead__image">
+      <figure class="lead__image-wrapper">
+        <img src="./blocks/lead/__image.jpg" alt="Женщина в поезде лежит на полке" class="lead__image">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
     </section>
+    <article class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
+        планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле,
+        Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
+        Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых
+        перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей,
+        усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране.
+        Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов 11</li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_font-weight_400">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_font-weight_400">16</span></li>
+        <li>Природных заповедников <span class="intro__list_font-weight_400">105</span></li>
+        <li>Аэропортов <span class="intro__list_font-weight_400">241</span></li>
+      </ul>
+    </article>
   </main>
   <footer class="footer">
   </footer>
