block photo-grid dev started

--- a/index.html
+++ b/index.html
@@ -48,6 +48,44 @@
         <li>Аэропортов <span class="intro__list_font-weight_400">241</span></li>
       </ul>
     </article>
+    <ul class="photo-grid">
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-1.jpg" alt="Вид из окна поезда">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-3.jpg" alt="Собака стоит на стоге сена в поле">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит льду - крупный план на колесо и лед">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-6.jpg" alt="Песочный ерег моря с видом на горы">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-7.jpg" alt="Вид на горы">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-8.jpg" alt="Знак пешеходный переход на фоне волнорезов">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-9.jpg" alt="Вид на коричневые горы с туманом">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-10.jpg" alt="Вид на вулкан на фоне неба">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-11.jpg" alt="Скалистый берег">
+      </li>
+      <li class="photo-grid__item">
+        <img src="./blocks/photo-grid/__item-12.jpg" alt="Туман в горах">
+      </li>
+    </ul>
   </main>
   <footer class="footer">
   </footer>
