--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </article>
     <ul class="photo-grid">
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-1.jpg" alt="Вид из окна поезда">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-1.jpg" alt="Вид из окна поезда">
       </li>
       <li class="photo-grid__item">
         <img src="./blocks/photo-grid/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
@@ -62,10 +62,10 @@
         <img src="./blocks/photo-grid/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит льду - крупный план на колесо и лед">
+        <img src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит на льду - крупный план на колесо и лед">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-6.jpg" alt="Песочный ерег моря с видом на горы">
+        <img src="./blocks/photo-grid/__item-6.jpg" alt="Песочный берег моря с видом на горы">
       </li>
       <li class="photo-grid__item">
         <img src="./blocks/photo-grid/__item-7.jpg" alt="Вид на горы">
@@ -86,8 +86,109 @@
         <img src="./blocks/photo-grid/__item-12.jpg" alt="Туман в горах">
       </li>
     </ul>
+    <section class="places">
+      <article class="place">
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+        </div>
+        <img src="./blocks/place/Kurshskaya_kosa.jpg" alt="Камни торчат из воды на берегу моря" class="place__image">
+        <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного
+          Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на
+          краю российского анклава.
+        </p>
+        <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же
+          по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов.
+          Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.
+        </p>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+        </div>
+        <img src="./blocks/place/Kolskiy.jpg" alt="Берег моря, скалы, камни, снег" class="place__image">
+        <p class="place__paragraph">
+          Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой
+          на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
+        </p>
+        <p class="place__paragraph">
+          Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно,
+          слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
+          вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно
+          накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
+        </p>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+        </div>
+        <img src="./blocks/place/Altay.jpg" alt="Зеленые деревья, лес крупным планом" class="place__image">
+        <p class="place__paragraph">
+          Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
+          вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна,
+          сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.
+        </p>
+        <p class="place__paragraph">
+          Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры
+          и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули.
+          И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
+        </p>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+        </div>
+        <img src="./blocks/place/Baykal.jpg" alt="Лед в трещинах крупным планом" class="place__image">
+        <p class="place__paragraph">
+          Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды
+          и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+        </p>
+        <p class="place__paragraph">
+          Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
+          лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду.
+          В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+        </p>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
+        </div>
+        <img src="./blocks/place/Kareliya.jpg" alt="Поворот русла реки, по берегам лес" class="place__image">
+        <p class="place__paragraph">
+          Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт
+          западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за
+          непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
+          существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь
+          тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто
+          тут хозяин.
+        </p>
+      </article>
+    </section>
+    <section class="cover">
+      <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала «на собаках»</a>
+      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <img src="./blocks/cover/cover__background.jpg" alt="Поезда стоят в депо на фоне заходящего солнца" class="cover__background">
+      <div class="cover__overlay"></div>
+    </section>
   </main>
   <footer class="footer">
+    <ul>
+      <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+      <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+      <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+      <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+      <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+    </ul>
+    <p class="footer__copyright">© 2020. Keeryl</p>
   </footer>
 </body>
 </html>
