work in progress

--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
         <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-1.jpg" alt="Вид из окна поезда">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-3.jpg" alt="Собака стоит на стоге сена в поле">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-3.jpg" alt="Собака стоит на стоге сена в поле">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит на льду - крупный план на колесо и лед">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит на льду - крупный план на колесо и лед">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-6.jpg" alt="Песочный берег моря с видом на горы">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-6.jpg" alt="Песочный берег моря с видом на горы">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-7.jpg" alt="Вид на горы">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-7.jpg" alt="Вид на горы">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-8.jpg" alt="Знак пешеходный переход на фоне волнорезов">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-8.jpg" alt="Знак пешеходный переход на фоне волнорезов">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-9.jpg" alt="Вид на коричневые горы с туманом">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-9.jpg" alt="Вид на коричневые горы с туманом">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-10.jpg" alt="Вид на вулкан на фоне неба">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-10.jpg" alt="Вид на вулкан на фоне неба">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-11.jpg" alt="Скалистый берег">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-11.jpg" alt="Скалистый берег">
       </li>
       <li class="photo-grid__item">
-        <img src="./blocks/photo-grid/__item-12.jpg" alt="Туман в горах">
+        <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-12.jpg" alt="Туман в горах">
       </li>
     </ul>
     <section class="places">
@@ -174,14 +174,15 @@
       </article>
     </section>
     <section class="cover">
-      <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала «на собаках»</a>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      <img src="./blocks/cover/cover__background.jpg" alt="Поезда стоят в депо на фоне заходящего солнца" class="cover__background">
-      <div class="cover__overlay"></div>
+      <img class="cover__background" src="./blocks/cover/cover__background.jpg" alt="Поезда стоят в депо на фоне заходящего солнца">
+      <div class="cover__overlay">
+        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала «на собаках»</a>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <ul>
+    <ul class="footer__links">
       <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
       <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
       <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
