--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
         <figure class="lead__image-wrapper">
           <img src="./blocks/lead/__image.jpg" alt="Женщина в поезде лежит на полке" class="lead__image">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
