--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body class="root">
   <div class="wrapper">
-    <header class="header">
-      <a class="header__logo-link" href="#">
+    <header class="header" id="header">
+      <a class="header__logo-link" href="#header" target="_self">
         <img class="header__logo" src="./blocks/header/__logo.svg" alt="Логотип в виде формы России на карте и надписи Россия">
       </a>
       <ul class="header__lang-links">
         <li>
-          <a class="header__lang-link header__lang-link_decoration_underlined" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_decoration_underlined" href="#" target="_self">Ru</a>
         </li>
         <li>
-          <a class="header__lang-link" href="#">En</a>
+          <a class="header__lang-link" href="#" target="_self">En</a>
         </li>
       </ul>
     </header>
@@ -42,11 +42,11 @@
           усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране.
           Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_font-weight_400">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_font-weight_400">16</span></li>
-          <li>Природных заповедников <span class="intro__list_font-weight_400">105</span></li>
-          <li>Аэропортов <span class="intro__list_font-weight_400">241</span></li>
+          <li>Часовых поясов <span class="intro__list-number">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+          <li>Природных заповедников <span class="intro__list-number">105</span></li>
+          <li>Аэропортов <span class="intro__list-number">241</span></li>
         </ul>
       </article>
       <section class="photo-grid-section">
