After first review

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body class="root">
   <div class="wrapper">
     <header class="header" id="header">
-      <a class="header__logo-link" href="#header" target="_self">
-        <img class="header__logo" src="./blocks/header/__logo.svg" alt="Логотип в виде формы России на карте и надписи Россия">
+      <a class="header__logo-link" href="#" target="_self">
+        <img class="header__logo" src="./blocks/header/images/__logo.svg" alt="Логотип в виде формы России на карте и надписи Россия">
       </a>
       <ul class="header__lang-links">
         <li>
@@ -28,7 +28,7 @@
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
         <figure class="lead__image-wrapper">
-          <img src="./blocks/lead/__image.jpg" alt="Женщина в поезде лежит на полке" class="lead__image">
+          <img src="./blocks/lead/images/__image.jpg" alt="Женщина в поезде лежит на полке" class="lead__image">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -49,43 +49,43 @@
           <li>Аэропортов <span class="intro__list-number">241</span></li>
         </ul>
       </article>
-      <section class="photo-grid-section">
-        <ul class="photo-grid">
+      <section class="photo-grid">
+        <ul class="photo-grid__items">
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-1.jpg" alt="Вид из окна поезда">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-1.jpg" alt="Вид из окна поезда">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-2.jpg" alt="Заснеженные горы и облака над ними вид сверху">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-3.jpg" alt="Собака стоит на стоге сена в поле">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-3.jpg" alt="Собака стоит на стоге сена в поле">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-4.jpg" alt="Вид на горный склон с деревьями в тумане">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-5.jpg" alt="Машина стоит на льду - крупный план на колесо и лед">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-5.jpg" alt="Машина стоит на льду - крупный план на колесо и лед">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-6.jpg" alt="Песочный берег моря с видом на горы">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-6.jpg" alt="Песочный берег моря с видом на горы">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-7.jpg" alt="Вид на горы">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-7.jpg" alt="Вид на горы">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-8.jpg" alt="Знак пешеходный переход на фоне волнорезов">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-8.jpg" alt="Знак пешеходный переход на фоне волнорезов">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-9.jpg" alt="Вид на коричневые горы с туманом">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-9.jpg" alt="Вид на коричневые горы с туманом">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-10.jpg" alt="Вид на вулкан на фоне неба">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-10.jpg" alt="Вид на вулкан на фоне неба">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-11.jpg" alt="Скалистый берег">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-11.jpg" alt="Скалистый берег">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__item-image" src="./blocks/photo-grid/__item-12.jpg" alt="Туман в горах">
+            <img class="photo-grid__item-image" src="./blocks/photo-grid/images/__item-12.jpg" alt="Туман в горах">
           </li>
         </ul>
       </section>
@@ -93,10 +93,10 @@
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
-          <img src="./blocks/place/Kurshskaya_kosa.jpg" alt="Камни торчат из воды на берегу моря" class="place__image">
+          <img src="./blocks/place/images/Kurshskaya_kosa.jpg" alt="Камни торчат из воды на берегу моря" class="place__image">
           <div class="place__text-wrapper">
             <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного
               Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на
@@ -111,10 +111,10 @@
         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
-          <img src="./blocks/place/Kolskiy.jpg" alt="Берег моря, скалы, камни, снег" class="place__image">
+          <img src="./blocks/place/images/Kolskiy.jpg" alt="Берег моря, скалы, камни, снег" class="place__image">
           <div class="place__text-wrapper">
             <p class="place__paragraph">
               Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой
@@ -131,10 +131,10 @@
         <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
-          <img src="./blocks/place/Altay.jpg" alt="Зеленые деревья, лес крупным планом" class="place__image">
+          <img src="./blocks/place/images/Altay.jpg" alt="Зеленые деревья, лес крупным планом" class="place__image">
           <div class="place__text-wrapper">
             <p class="place__paragraph">
               Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
@@ -151,10 +151,10 @@
         <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
-          <img src="./blocks/place/Baykal.jpg" alt="Лед в трещинах крупным планом" class="place__image">
+          <img src="./blocks/place/images/Baykal.jpg" alt="Лед в трещинах крупным планом" class="place__image">
           <div class="place__text-wrapper">
             <p class="place__paragraph">
               Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды
@@ -170,10 +170,10 @@
         <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">url</p>
             <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
           </div>
-          <img src="./blocks/place/Kareliya.jpg" alt="Поворот русла реки, по берегам лес" class="place__image">
+          <img src="./blocks/place/images/Kareliya.jpg" alt="Поворот русла реки, по берегам лес" class="place__image">
           <div class="place__text-wrapper">
             <p class="place__paragraph">
               Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт
@@ -187,22 +187,23 @@
         </article>
       </section>
       <section class="cover">
-        <img class="cover__background" src="./blocks/cover/cover__background.jpg" alt="Поезда стоят в депо на фоне заходящего солнца">
-        <div class="cover__overlay">
-          <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
+        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
           <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
-        </div>
+        </a>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
-      </ul>
-      <p class="footer__copyright">© 2020. Keeryl</p>
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">&copy; 2020. Keeryl</p>
     </footer>
   </div>
 </body>
